# recastnavigation

./: .gitignore  CMakeLists.txt  build_arm32.bat  build_arm64.bat  build_ios.sh  build_osx.sh  build_win32.bat  build_win64.bat  build_win64_demo.bat  build_x86.bat  build_x86_64.bat
Plugins/OSX/: NavMeshWrapper.dylib  RecastWrapper.dylib
Unity/: CMakeLists.txt
Unity/AStarWrapper/: AStarImpl.cpp  AStarImpl.h  AStarTile.cpp  AStarTile.h  AStarWrapper.cpp  AStarWrapper.h  CMakeLists.txt
Unity/NavMeshBuilder/: CMakeLists.txt  main.cpp
Unity/NavMeshWrapper/: CMakeLists.txt  NavMeshWrapper.cpp  NavMeshWrapper.h
Unity/RecastWrapper/: CMakeLists.txt  RecastWrapper.cpp  RecastWrapper.h
